# powerm

./: AUTHORS  Makefile.am  README  README.md  configure.in  powerm.pc.in
src/: Makefile.am  powerm.c  powerm.h  test-libpowerm.c
